--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "dbchain-js-client": "^1.1.9",
+    "qrcode": "^1.4.4",
     "vue": "^2.6.11",
     "vue-i18n": "^8.16.0",
+    "vue-qrcode-reader": "^2.1.1",
     "vue-router": "^3.1.6",
     "vuetify": "^2.2.11"
   },
